// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contact form renders a contact form 1`] = `
<div
  id="contact-form"
>
  <div
    className="ui container"
    id="view"
  >
    <div
      className="ui icon negative attached message"
    >
      <i
        aria-hidden="true"
        className="warning icon"
        onClick={[Function]}
      />
      <div
        className="content"
      >
        <div
          className="header"
        >
          Error
        </div>
      </div>
    </div>
    <div
      className="ui container"
    >
      <form
        className="ui form"
        method="post"
        onSubmit={[Function]}
      >
        <fieldset
          className="invisible"
        >
          <div
            className="ui raised segments"
          >
            <div
              className="ui segment"
            >
              <div
                className="ui segment primary"
              >
                <h1
                  style={
                    Object {
                      "fontSize": "16px",
                    }
                  }
                >
                   
                  Contact form
                </h1>
              </div>
              <div
                className="mocked-default-widget"
                id="mocked-field-name"
              >
                Name
                 - 
                No description
              </div>
              <div
                className="mocked-default-widget"
                id="mocked-field-from"
              >
                From
                 - 
                No description
              </div>
              <div
                className="mocked-default-widget"
                id="mocked-field-subject"
              >
                Subject
                 - 
                No description
              </div>
              <div
                className="mocked-textarea-widget"
                id="mocked-field-message"
              >
                Message
                 - 
                No description
              </div>
            </div>
            <div
              className="ui clearing segment actions"
            >
              <button
                aria-label="Send"
                className="ui basic primary right floated button"
                onClick={[Function]}
                title="Send"
                type="submit"
              >
                <svg
                  className="icon circled"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": undefined,
                    }
                  }
                  onClick={null}
                  style={
                    Object {
                      "fill": "currentColor",
                      "height": "30px",
                      "width": "auto",
                    }
                  }
                  viewBox=""
                  xmlns=""
                />
              </button>
              <button
                aria-label="Cancel"
                className="ui basic secondary right floated button"
                onClick={[Function]}
                title="Cancel"
              >
                <svg
                  className="icon circled"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": undefined,
                    }
                  }
                  onClick={null}
                  style={
                    Object {
                      "fill": "currentColor",
                      "height": "30px",
                      "width": "auto",
                    }
                  }
                  viewBox=""
                  xmlns=""
                />
              </button>
            </div>
          </div>
        </fieldset>
      </form>
    </div>
    <div
      id="Portal"
    />
  </div>
</div>
`;

exports[`Contact form renders a contact form with error message 1`] = `
<div
  id="contact-form"
>
  <div
    className="ui container"
    id="view"
  >
    <div
      className="ui icon negative attached message"
    >
      <i
        aria-hidden="true"
        className="warning icon"
        onClick={[Function]}
      />
      <div
        className="content"
      >
        <div
          className="header"
        >
          Error
        </div>
        <p>
          Error foo
        </p>
      </div>
    </div>
    <div
      className="ui container"
    >
      <form
        className="ui form"
        method="post"
        onSubmit={[Function]}
      >
        <fieldset
          className="invisible"
        >
          <div
            className="ui raised segments"
          >
            <div
              className="ui segment"
            >
              <div
                className="ui segment primary"
              >
                <h1
                  style={
                    Object {
                      "fontSize": "16px",
                    }
                  }
                >
                   
                  Contact form
                </h1>
              </div>
              <div
                className="mocked-default-widget"
                id="mocked-field-name"
              >
                Name
                 - 
                No description
              </div>
              <div
                className="mocked-default-widget"
                id="mocked-field-from"
              >
                From
                 - 
                No description
              </div>
              <div
                className="mocked-default-widget"
                id="mocked-field-subject"
              >
                Subject
                 - 
                No description
              </div>
              <div
                className="mocked-textarea-widget"
                id="mocked-field-message"
              >
                Message
                 - 
                No description
              </div>
            </div>
            <div
              className="ui clearing segment actions"
            >
              <button
                aria-label="Send"
                className="ui basic primary right floated button"
                onClick={[Function]}
                title="Send"
                type="submit"
              >
                <svg
                  className="icon circled"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": undefined,
                    }
                  }
                  onClick={null}
                  style={
                    Object {
                      "fill": "currentColor",
                      "height": "30px",
                      "width": "auto",
                    }
                  }
                  viewBox=""
                  xmlns=""
                />
              </button>
              <button
                aria-label="Cancel"
                className="ui basic secondary right floated button"
                onClick={[Function]}
                title="Cancel"
              >
                <svg
                  className="icon circled"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": undefined,
                    }
                  }
                  onClick={null}
                  style={
                    Object {
                      "fill": "currentColor",
                      "height": "30px",
                      "width": "auto",
                    }
                  }
                  viewBox=""
                  xmlns=""
                />
              </button>
            </div>
          </div>
        </fieldset>
      </form>
    </div>
    <div
      id="Portal"
    />
  </div>
</div>
`;
